Added additional check to the CMake before adding a subdirectory (#8)

--- a/lib/system/CMakeLists.txt
+++ b/lib/system/CMakeLists.txt
@@ -1,3 +1,4 @@
-if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_SYSTEM}/CMakeLists.txt")
+if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_SYSTEM}/CMakeLists.txt"
+    AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_SYSTEM}/machine/${PROJECT_MACHINE}/CMakeLists.txt")
   add_subdirectory (${PROJECT_SYSTEM})
-endif (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_SYSTEM}/CMakeLists.txt")
+endif ()
